# graph-algorithms-visualization

./: .gitignore  README.md
data/: ExampleBFSConfig.txt  ExampleBFSConfigBigger.txt  ExampleFF-BFSConfig.txt  FlowGraphConfig.txt  PathGraphConfig.txt
docs/: ProgramDocumentation.md
src/: BFSGraphAlgorithm.cpp  BFSGraphAlgorithm.hpp  CMakeLists.txt  Color.hpp  DrawHelpers.cpp  DrawHelpers.hpp  Drawable.hpp  Edge.hpp  FlowGraph.cpp  FlowGraph.hpp  FlowGraphConfigLoader.cpp  FlowGraphConfigLoader.hpp  FordFulkersonGraphAlgorithm.cpp  FordFulkersonGraphAlgorithm.hpp  Frame.hpp  GIFFrame.cpp  GIFFrame.hpp  GIFRenderer.cpp  GIFRenderer.hpp  Graph.hpp  GraphAlgorithm.hpp  GraphAlgorithmVisualizer.hpp  Node.hpp  PathGraph.cpp  PathGraph.hpp  PathGraphConfigLoader.cpp  PathGraphConfigLoader.hpp  README.md  Renderer.hpp  gif.cpp  gif.hpp  main.cpp
